--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
     - name: 🧳 Archive build output
       run: |
         mkdir output
-        copy /Y .\bin\Release\* -Destination output\ -Recurse
-        powershell Compress-Archive -Path output\* -DestinationPath NanoBin.zip
+        Copy-Item -Path .\bin\Release\* -Destination output\ -Force
+        Compress-Archive -Path output\* -DestinationPath NanoBin.zip
 
     - name: ⬆️ Upload artifact
       uses: actions/upload-artifact@v4
