--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,29 @@
-name: Build NanoBin
+name: Build and Release NanoBin
 
 on:
   push:
+    tags:
+      - 'v*'  # например: v1.0.0, v2.1.3
+  push:
     branches: [ main ]
     paths-ignore:
-    - '**/README.md'
+      - '**/*.md'
+      - '**/*.txt'
+      - 'LICENSE'
+      - '**/*.ico'
+      - '**/*.png'
+      - '**/*.jpg'
+      - '**/*.svg'
   pull_request:
     branches: [ main ]
     paths-ignore:
-    - '**/README.md'
+      - '**/*.md'
+      - '**/*.txt'
+      - 'LICENSE'
+      - '**/*.ico'
+      - '**/*.png'
+      - '**/*.jpg'
+      - '**/*.svg'
 
 jobs:
   build:
@@ -33,8 +48,15 @@ jobs:
         Copy-Item -Path .\bin\Release\* -Destination output\ -Force -Recurse
         Compress-Archive -Path output\* -DestinationPath NanoBin.zip
 
-    - name: ⬆️ Upload artifact
+    - name: ⬆️ Upload artifact to Actions
+      if: github.event_name != 'push' || !startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-artifact@v4
       with:
         name: NanoBin-Windows
         path: NanoBin.zip
+
+    - name: 🚀 Create GitHub Release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v2
+      with:
+        files: NanoBin.zip
