--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,9 @@ jobs:
         shell: pwsh
         run: |
           $content = Get-Content ./Properties/AssemblyInfo.cs
-          Write-Host $content
-          if ($content -match 'AssemblyVersion\("([0-9\.]+)"\)') {
+            if ($content -match 'AssemblyVersion\("([0-9\.]+)"\)') {
+                Write-Host "Полное совпадение: $($matches[0])"
+                Write-Host "Только версия: $($matches[1])"
             $version = $matches[1]
             echo "version=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
           } else {
