--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
         shell: pwsh
         run: |
           $content = Get-Content ./Properties/AssemblyInfo.cs
+          Write-Host $content
             if ($content -match 'AssemblyVersion\("([0-9\.]+)"\)') {
                 Write-Host $matches
 
