--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
           Write-Host "----------------------------------------------------------------------"
           Write-Host "Getting matches..."
             if ($content -cmatch '(AssemblyVersion)') {
-                Write-Host "Matches found: $matches.count"
+                Write-Host "Matches found: $matches.Count"
                 Write-Host $matches
 
               }
