--- a/NanoBin.csproj
+++ b/NanoBin.csproj
@@ -15,6 +15,11 @@
     <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Resources\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="Resources\**" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="1e1s02ls.hfl~" />
   </ItemGroup>
   <ItemGroup>
@@ -68,8 +73,5 @@
     <None Update="tray_full.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
   </ItemGroup>
 </Project>
