--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           $target = Get-ChildItem -Path .\bin\Release\ -Directory | Where-Object { $_.Name -like 'net*' } | Select-Object -First 1
           mkdir output\NanoBin
-          Copy-Item -Path "$($target.FullName)" -Destination output\NanoBin -Recurse -Force
+          Copy-Item -Path "$($target.FullName)\*" -Destination output\NanoBin -Recurse -Force
           Compress-Archive -Path output\NanoBin -DestinationPath NanoBin.zip
 
       - name: ⬆️ Upload artifact to Actions
@@ -105,5 +105,6 @@ jobs:
           name: NanoBin v${{ needs.build.outputs.version }}
           body: ${{ steps.changelog.outputs.body }}
           files: NanoBin.zip
+          update_existing: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
