--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Build & Release NanoBin
 
 permissions:
   contents: write
-on: workflow_dispatch:
+on: 
+  workflow_dispatch:
   push:
     branches: [ main ]
     paths-ignore:
